# physics-engine-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
math/: Vec3.cpp  Vec3.hpp
physics/: RigidBody.cpp  RigidBody.hpp  World.cpp  World.hpp
